# mcp

./: .gitignore
mcp-client/: .env  client.py  pyproject.toml  requirements.txt
mcp-client-agent-langchain/: .env  main.py  pyproject.toml  requirements.txt
mcp-client-agent-llamaindex/: .env  README.md  pyproject.toml  requirements.txt  workflow_function_calling_agent.py
mcp-client-llamaindex/: .env  client.py  client_agent_llama.py  client_dummy.py  client_llama.py  pyproject.toml  requirements.txt
mcp-client-llamaindex/workflow/: .env  agent_events.py  config.py  workflow_function_calling_agent.py
mcp-server/weather/: README.md  pyproject.toml  requirements.txt  weather.py
